fix: handle organization level commands
see https://github.com/gravitee-io/issues/issues/7408