@@ -17,18 +17,23 @@ package io.gravitee.rest.api.services.search;
 
 import static org.mockito.Mockito.*;
 
+import io.gravitee.repository.exceptions.TechnicalException;
+import io.gravitee.repository.management.api.OrganizationRepository;
+import io.gravitee.repository.management.model.Organization;
 import io.gravitee.rest.api.model.command.CommandEntity;
 import io.gravitee.rest.api.model.command.CommandTags;
 import io.gravitee.rest.api.service.CommandService;
-import io.gravitee.rest.api.service.common.GraviteeContext;
+import io.gravitee.rest.api.service.common.ExecutionContext;
 import io.gravitee.rest.api.service.search.SearchEngineService;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
+import java.util.Set;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.runners.MockitoJUnitRunner;
+import org.mockito.junit.MockitoJUnitRunner;
 
 /**
  * @author Nicolas GERAUD (nicolas.geraud at graviteesource.com)
@@ -41,23 +46,45 @@ public class ScheduledSearchIndexerServiceTest {
     ScheduledSearchIndexerService service = new ScheduledSearchIndexerService();
 
     @Mock
+    OrganizationRepository organizationRepository;
+
+    @Mock
     CommandService commandService;
 
     @Mock
     SearchEngineService searchEngineService;
 
     @Test
-    public void shouldDoNothing() {
-        when(commandService.search(eq(GraviteeContext.getExecutionContext()), any())).thenReturn(Collections.emptyList());
+    public void shouldDoNothing() throws TechnicalException {
+        final Organization organization = new Organization();
+        organization.setId("DEFAULT");
+
+        final ExecutionContext expectedExecutionContext = new ExecutionContext(organization);
+
+        when(organizationRepository.findAll()).thenReturn(Set.of(organization));
+
+        when(commandService.search(eq(expectedExecutionContext), any())).thenReturn(Collections.emptyList());
 
         service.run();
 
         verify(commandService, never()).ack(anyString());
-        verify(searchEngineService, never()).process(eq(GraviteeContext.getExecutionContext()), any());
+        verify(searchEngineService, never()).process(eq(expectedExecutionContext), any());
     }
 
     @Test
-    public void shouldInsertAndDelete() {
+    public void shouldRunForEachOrganization() throws TechnicalException {
+        final Organization org1 = new Organization();
+        org1.setId("DEFAULT_1");
+
+        final ExecutionContext expectedExecutionContextForOrg1 = new ExecutionContext(org1);
+
+        final Organization org2 = new Organization();
+        org2.setId("DEFAULT_2");
+
+        final ExecutionContext expectedExecutionContextForOrg2 = new ExecutionContext(org2);
+
+        when(organizationRepository.findAll()).thenReturn(Set.of(org1, org2));
+
         CommandEntity insert = new CommandEntity();
         insert.setId("insertid");
         insert.setTags(Collections.singletonList(CommandTags.DATA_TO_INDEX));
@@ -66,11 +93,46 @@ public class ScheduledSearchIndexerServiceTest {
         delete.setId("deleteid");
         delete.setTags(Collections.singletonList(CommandTags.DATA_TO_INDEX));
         delete.setContent("{\"id\":\"2\"}");
-        when(commandService.search(eq(GraviteeContext.getExecutionContext()), any())).thenReturn(Arrays.asList(delete, insert));
+
+        when(commandService.search(any(ExecutionContext.class), any()))
+            .thenAnswer(
+                call -> {
+                    ExecutionContext context = call.getArgument(0);
+                    return "DEFAULT_1".equals(context.getOrganizationId()) ? List.of(delete, insert) : List.of();
+                }
+            );
+
+        service.run();
+
+        verify(commandService, times(1)).search(eq(expectedExecutionContextForOrg1), any());
+        verify(commandService, times(2)).ack(anyString());
+        verify(searchEngineService, times(2)).process(eq(expectedExecutionContextForOrg1), any());
+
+        verify(commandService, times(1)).search(eq(expectedExecutionContextForOrg2), any());
+    }
+
+    @Test
+    public void shouldInsertAndDelete() throws TechnicalException {
+        final Organization organization = new Organization();
+        organization.setId("DEFAULT");
+
+        final ExecutionContext expectedExecutionContext = new ExecutionContext(organization);
+
+        when(organizationRepository.findAll()).thenReturn(Set.of(organization));
+
+        CommandEntity insert = new CommandEntity();
+        insert.setId("insertid");
+        insert.setTags(Collections.singletonList(CommandTags.DATA_TO_INDEX));
+        insert.setContent("{\"id\":\"1\"}");
+        CommandEntity delete = new CommandEntity();
+        delete.setId("deleteid");
+        delete.setTags(Collections.singletonList(CommandTags.DATA_TO_INDEX));
+        delete.setContent("{\"id\":\"2\"}");
+        when(commandService.search(eq(expectedExecutionContext), any())).thenReturn(Arrays.asList(delete, insert));
 
         service.run();
 
         verify(commandService, times(2)).ack(anyString());
-        verify(searchEngineService, times(2)).process(eq(GraviteeContext.getExecutionContext()), any());
+        verify(searchEngineService, times(2)).process(eq(expectedExecutionContext), any());
     }
 }
